fix: macro key editor modifiers alignment

--- a/packages/uhk-web/src/app/components/macro/action-editor/macro-action-editor.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/macro-action-editor.component.scss
@@ -78,6 +78,10 @@
     &__tabs {
         padding-right: 0;
         padding-left: 1rem;
+
+        @include media-breakpoint-down(md) {
+            padding-left: 0;
+        }
     }
 
     &__actions {
