--- a/packages/uhk-web/src/app/components/macro/action-editor/tab/mouse/macro-mouse.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/tab/mouse/macro-mouse.component.scss
@@ -6,7 +6,7 @@
     }
 
     &__actions {
-        padding-left: 2rem;
+        padding-left: 1.5rem;
     }
 }
 
